# filebundler

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO-less-relevant.md  TODO.md  main.py  mypy.ini  plan.md  pre-commit-config.yaml  pyproject.toml  start-server.bat
.filebundler/: .gitignore  .include  bundles.json  ignore-patterns.txt  project-structure.md  selections.json  settings.json
.filebundler/bundles/: app-state.json  auto-bundle-and-bug-fixes.json  bundle-management.json  bundles-and-exports.json  files-with-logger.json  publish-pypi-setup.json  settings-and-persistence.json  testing-ui-and-state.json
.filebundler/tasks/: CLI.md  filebundler-MCP-server.md  filebundler-unbundle-task.md  gemini-llm-utility.md  project-path-validation.md  task-file-management.md  token-ranking-tab.md
.github/workflows/: python-publish.yml
.streamlit/: config.toml
docs/: ci-cd.md  example-bundle.xml  state-logic.md  streamlit-testing-synthesized.md  test-suite.md
filebundler/: Bundle.py  BundleManager.py  FileBundlerApp.py  FileTree.py  __init__.py  app.py  constants.py  main.py  settings_manager.py  settings_panel.py  state.py  utils.py
filebundler/features/ignore_patterns/: __init__.py  default-include-patterns.txt
filebundler/lib/llm/: auto_bundle.py  claude.py
filebundler/managers/: BundleManager.py  GlobalSettingsManager.py  ProjectSettingsManager.py  SelectionManager.py  SelectionsManager.py  SettingsManager.py
filebundler/models/: AppProtocol.py  Bundle.py  FileItem.py  GlobalSettings.py  ProjectSettings.py
filebundler/services/: cached_operations.py  cli_unbundle.py  code_export_service.py  path_validation.py  project_structure.py  token_count.py
filebundler/ui/: SelectionManager.py  bundle_display.py  confirm.py  file_tree.py  notification.py  project_selection.py
filebundler/ui/callbacks/: __init__.py
filebundler/ui/components/: path_migration_dialog.py  selectable_file_items.py
filebundler/ui/sidebar/: file_tree.py  file_tree_buttons.py  project_selection.py  settings_manager.py  settings_panel.py
filebundler/ui/tabs/: auto_bundler.py  export_contents.py  manage_bundles.py  selected_files.py  token_ranking.py
filebundler/utils/: __init__.py  filepath_checker.py  language_formatting.py  project_structure.py  project_utils.py
memory-bank/: global-instructions.md
scripts/: increase_version.py  start-dev-server.sh  start-server.bat  test-package.sh  uv-build.sh
src/: app.py  main.py
src/filebundler/: FileBundlerApp.py  constants.py
src/filebundler/managers/: SelectionsManager.py
src/filebundler/models/: FileItem.py  GlobalSettings.py  ProjectSettings.py
src/filebundler/utils/: project_utils.py
tests/: test_ignore_patterns.py
tests/llm/: test_auto_bundle.py
(+10 files in other folders)
