[project]
name = "file-bundler"
version = "0.1.0"
description = "File Bundler is an app to bundle project files together and use them for LLM prompting. It helps estimate and optimize token and context usage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pyperclip>=1.9.0",
    "ruff>=0.9.10",
    "streamlit>=1.43.2",
]
