[project]
name = "file-bundler"
version = "0.1.0"
description = "File Bundler is an app to bundle project files together and use them for LLM prompting. It helps estimate and optimize token and context usage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pyperclip>=1.9.0",
    "streamlit>=1.43.2",
    "pydantic-settings>=2.8.1",
    "tiktoken>=0.9.0",
    "logfire>=3.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.10",
    "pytest>=8.3.5",
]
