[project]
name = "filebundler"
version = "0.9.33"
description = "filebundler is a streamlit app to bundle project files together and use them for LLM prompting. It helps estimate and optimize token and context usage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "logfire>=4.14.2",
    "pydantic-ai>=1.9.1",
    "tiktoken>=0.12.0",
    "pydantic>=2.12.3",
    "pyperclip>=1.11.0",
    "streamlit>=1.51.0",
    "pydantic-settings>=2.11.0",
]
authors = [
    { name = "DavidSF", email = "david@filebundler.com" }
]
license = "GPL-3.0-or-later"
repository = "https://github.com/dsfaccini/filebundler"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.10",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/dsfaccini/filebundler"
Issues = "https://github.com/dsfaccini/filebundler/issues"

# Script that runs when you type "filebundler" or "uvx filebundler"
[project.scripts]
filebundler = "filebundler.main:main"

[project.entry-points."streamlit.app"]
filebundler = "filebundler.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["filebundler"]
[tool.hatch.build.targets.sdist.options]
clean = true

# [tool.hatch.build.targets.wheel]
# options = ["--clean"]
# packages = ["filebundler"]